--- a/DB_SQL/OTHER/結合関係.md
+++ b/DB_SQL/OTHER/結合関係.md
@@ -70,7 +70,6 @@ WHERE depts.dept_id = employees.dept_id;
 ## テーブル結合にLIKE演算子を使えるか
 
 普通に行ける。  
-[テーブル結合 LIKE演算子](https://teratail.com/questions/65949)  
 
 ``` sql
 SELECT
@@ -84,6 +83,8 @@ WHERE
     テーブル2.Y IS NULL 
     AND ~~
 ```
+
+[テーブル結合 LIKE演算子](https://teratail.com/questions/65949)  
 
 ---
 
@@ -203,7 +204,7 @@ FROM a
 
 ---
 
-## left out join で右側が多かった時ってどうなる？
+## LEFT JOIN で右側が多かった時ってどうなる？
 
 主体によって結果は変わるが、件数が多いテーブルの件数と同じになる。  
 左が少なくて、右が多くても、左に合わせて少なくなるわけではない。  
@@ -233,9 +234,10 @@ insert into employees(dept_id,name) values(2,'関野');
 insert into employees(dept_id,name) values(0,'中村');
 ```
 
+■**左が少ない場合**
+
 ``` sql : 左が少ない
 select * from depts LEFT OUTER JOIN employees ON depts.dept_id = employees.dept_id
-select * from depts LEFT OUTER JOIN employees ON employees.dept_id = depts.dept_id
 
 -- id    name    id    name
 --  1  営業部     1    田中
@@ -249,9 +251,10 @@ select * from depts LEFT OUTER JOIN employees ON employees.dept_id = depts.dept_
 --  4  法務部  NULL    NULL
 ```
 
+■**左が多い場合**
+
 ``` sql : 左が多い
 select * from employees LEFT OUTER JOIN depts ON employees.dept_id = depts.dept_id
-select * from employees LEFT OUTER JOIN depts ON depts.dept_id = employees.dept_id
 
 -- id    name   id       name
 --  1    田中    1     営業部
@@ -263,4 +266,213 @@ select * from employees LEFT OUTER JOIN depts ON depts.dept_id = employees.dept_
 --  1    小澤    1     営業部
 --  2    関野    2     経理部
 --  0    中村  NULL      NULL
+```
+
+---
+
+## LEFT JOIN と RIGHT JOIN の併用
+
+実務でこういう構文があった。  
+
+``` sql
+SELECT
+    *
+FROM
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    LEFT OUTER JOIN dbo.ホテル
+    ON  dbo.予約.HotelCD = dbo.ホテル.HotelCD
+    ON  dbo.料金.FeeCD = dbo.予約.FeeCD
+```
+
+なぜこんな書き方をしたのか理解に苦しむが、分からないままにするのは嫌なので解析する。  
+
+まずONの位置。  
+すごく気持ち悪いけどOKらしい。  
+なぜONをすっ飛ばしてJOINできるのか謎だが、紐解いてみれば以下のようになる模様。  
+後で検証するが、結果も同じとなることが分かった。  
+
+``` sql
+-- これと
+SELECT
+    *
+FROM
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    LEFT OUTER JOIN dbo.ホテル
+    ON  dbo.予約.HotelCD = dbo.ホテル.HotelCD
+    ON  dbo.料金.FeeCD = dbo.予約.FeeCD
+
+-- これは同じ結果となる
+SELECT
+    *
+FROM
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    ON  dbo.料金.FeeCD = dbo.予約.FeeCD
+    LEFT OUTER JOIN dbo.ホテル
+    ON  dbo.予約.HotelCD = dbo.ホテル.HotelCD
+```
+
+全部LEFT JOINに置き換えてやってみたけど、これは駄目らしい。  
+
+``` sql
+SELECT
+    * 
+FROM
+    dbo.予約
+    LEFT OUTER JOIN dbo.料金
+    LEFT OUTER JOIN dbo.ホテル
+    -- マルチパート識別子"dbo.予約.FeeCD"をバインドできませんでした。
+    ON  dbo.予約.FeeCD = dbo.料金.FeeCD
+    ON  dbo.予約.HotelCD = dbo.ホテル.HotelCD
+```
+
+ONについてはこれでいいとして、次はRIGHTしてLEFTした時はつまりどういう結果になるのかを検証していく。  
+まずはデータの用意。  
+料金もホテルもない予約って何って感じだがテストなので勘弁。  
+
+``` sql
+CREATE TABLE 予約
+(
+    RevNo varchar(255) not null,
+    FeeCD int,
+    HotelCD int
+)
+INSERT INTO 予約
+VALUES
+    ('yyyymmdd0001',1000,10),
+    ('yyyymmdd0002',2000,10),
+    ('yyyymmdd0003',3000,20),
+    ('yyyymmdd0004',3000,30),
+    ('yyyymmdd0005',null,null),
+    ('yyyymmdd0006',5000,null)
+
+
+CREATE TABLE 料金
+(
+    FeeCD int,
+    FeeName nvarchar(255)
+)
+INSERT INTO 料金
+VALUES
+    (1000,'Fee1'),
+    (2000,'Fee2'),
+    (3000,'Fee3'),
+    (4000,'Fee4'),
+    (5000,'Fee5')
+
+
+CREATE TABLE ホテル
+(
+    HotelCD int,
+    HotelName nvarchar(255)
+)
+INSERT INTO ホテル
+VALUES
+    (10,'Hotel1'),
+    (20,'Hotel2')
+
+```
+
+>right joinだったら右が基準で左は付け足しです。  
+>left joinだったら左が基準で右は付け足しです。  
+>[SQLにはright joinとleft joinがありますよね。仕組みはわかるんですが、具体的にはどのような用途で使い分けるものなのでしょうか？ - Quora](https://jp.quora.com/SQL%E3%81%AB%E3%81%AFright-join%E3%81%A8left-join%E3%81%8C%E3%81%82%E3%82%8A%E3%81%BE%E3%81%99%E3%82%88%E3%81%AD-%E4%BB%95%E7%B5%84%E3%81%BF%E3%81%AF%E3%82%8F%E3%81%8B%E3%82%8B%E3%82%93%E3%81%A7%E3%81%99%E3%81%8C-)  
+
+つまり、料金が先に来ているが、あくまで予約が主体で、それに料金が紐づく、というわけか。  
+でも、JOINの順序関係的に、SELECTした場合に先に来るのは料金。  
+
+``` sql
+SELECT *
+FROM
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    ON dbo.料金.FeeCD = dbo.予約.FeeCD
+
+-- +---------+---------++--------------+-------+---------+
+-- | FeeCD   | FeeName || RevNo        | FeeCD | HotelCD |
+-- +---------+---------++--------------+-------+---------+
+-- | 1000    | Fee1    || yyyymmdd0001 | 1000  | 10      |
+-- | 2000    | Fee2    || yyyymmdd0002 | 2000  | 10      |
+-- | 3000    | Fee3    || yyyymmdd0003 | 3000  | 20      |
+-- | 3000    | Fee3    || yyyymmdd0004 | 3000  | 30      |
+-- | NULL    | NULL    || yyyymmdd0005 | NULL  | NULL    |
+-- | 5000    | Fee5    || yyyymmdd0005 | 5000  | NULL    |
+-- +---------+---------++--------------+-------+---------+
+```
+
+で、料金と予約が結合した結果(左側)を主体にして右側にホテルをくっつけるイメージね。
+
+``` sql
+SELECT *
+FROM
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    ON dbo.料金.FeeCD = dbo.予約.FeeCD
+    -- 追加
+    LEFT OUTER JOIN dbo.ホテル
+    ON  dbo.予約.HotelCD = dbo.ホテル.HotelCD
+
+-- +---------+---------++--------------+-------+---------++---------+-----------+
+-- | FeeCD   | FeeName || RevNo        | FeeCD | HotelCD || HotelCD | HotelName |
+-- +---------+---------++--------------+-------+---------++---------+-----------+
+-- | 1000    | Fee1    || yyyymmdd0001 | 1000  | 10      || 10      | Hotel1    |
+-- | 2000    | Fee2    || yyyymmdd0002 | 2000  | 10      || 10      | Hotel1    |
+-- | 3000    | Fee3    || yyyymmdd0003 | 3000  | 20      || 20      | Hotel2    |
+-- | 3000    | Fee3    || yyyymmdd0004 | 3000  | 30      || NULL    | NULL      |
+-- | NULL    | NULL    || yyyymmdd0005 | NULL  | NULL    || NULL    | NULL      |
+-- | 5000    | Fee5    || yyyymmdd0005 | 5000  | NULL    || NULL    | NULL      |
+-- +---------+---------++--------------+-------+---------++---------+-----------+
+```
+
+全部LEFT JOINに置き換えた場合。
+
+``` sql
+SELECT 
+    料金.*,予約.*,ホテル.* 
+FROM 
+    dbo.予約
+    LEFT JOIN dbo.料金
+    ON dbo.予約.FeeCD = dbo.料金.FeeCD
+    LEFT JOIN dbo.ホテル
+    ON dbo.予約.HotelCD = dbo.ホテル.HotelCD
+```
+
+LEFTとRIGHTを併用した時のメリットは`SELECT *`だけで「料金、予約、ホテル」の順に出力しつつ、全ての大本を予約とすることができる点だろうか。  
+LEFT JOINの場合は、大本が絶対に一番左に来るので、`SELECT *`しただけだと「予約、料金、ホテル」の順になってしまう。  
+なので、同じように出力したい場合は、`SELECT 料金.*,予約.*,ホテル.*` としないといけない点だろうか。  
+だとして、分かりにくさのほうがやばいので、やる意味はほぼないけどね。  
+
+最後に比較用としてコピペすれば動く、全部同じになる書き方を乗せる。  
+
+``` sql
+-- 元々の構文
+SELECT
+    *
+FROM
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    LEFT OUTER JOIN dbo.ホテル
+    ON  dbo.予約.HotelCD = dbo.ホテル.HotelCD
+    ON  dbo.料金.FeeCD = dbo.予約.FeeCD
+
+-- ONの位置を調整
+SELECT
+    *
+FROM
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    ON  dbo.料金.FeeCD = dbo.予約.FeeCD
+    LEFT OUTER JOIN dbo.ホテル
+    ON  dbo.予約.HotelCD = dbo.ホテル.HotelCD
+
+-- LEFT JOIN案
+SELECT
+    料金.*,予約.*,ホテル.* 
+FROM 
+    dbo.予約
+    LEFT JOIN dbo.料金
+    ON dbo.予約.FeeCD = dbo.料金.FeeCD
+    LEFT JOIN dbo.ホテル
+    ON dbo.予約.HotelCD = dbo.ホテル.HotelCD
 ```
