・参考追加 ・テーブル変数 ・ページング

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -661,3 +661,6 @@ C# send post
 ・クラス図と関連のまとめ
 ・コマンドまとめ
 
+for xml sqlserver  
+[SQL ServerでXMLを操作する 第1回：リレーショナルDBからXML文書を取り出す（2/2）](https://atmarkit.itmedia.co.jp/fxml/tanpatsu/15mssql/mssql02.html)  
+[SQL Server のチューニングについてまとめてみる - その17 - ( FOR XML PATH の連結をもう少し高速化してみる )](https://ryuchan.hatenablog.com/entry/2016/02/02/000244)  
