・整理 ・EXISTSの高速化

--- a/DB_SQL/OTHER/重複関係.md
+++ b/DB_SQL/OTHER/重複関係.md
@@ -342,3 +342,16 @@ EXISTSは問答無用で早かったが。
 >そのぐらいDISTINCTの使用は要注意なのです。  
 
 [select文でグルーピングする場合、先頭にdistinctを記述する場合... - Yahoo!知恵袋](https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q12139645547)  
+
+---
+
+## DISTINCTの高速化
+
+- インデックスを付けてそれでEXISTSする
+
+>高速化のためには、fromに指定するのはmaster_tableのみにして、EXISTSを使う。  
+>さらにbig_table.master_idにINDEXを付与する。  
+>EXISTSを使用することでbig_tableの中で各master_idが一件でも見つかれば処理が終了することに加え、INDEXを使用してmaster_idを検索するため、高速化が見込める。  
+>where句にbig_tableのmaster_id以外の条件(cond_a)が加わる場合、master_idのINDEXの代わりにmaster_idとcond_aの複合INDEXを作成することも考える。  
+
+[DISTINCTを高速化するにはEXISTSを使う - grep Tips *](https://www.greptips.com/posts/386/)  
