・整理 ・unionとunion all ・ヨコタテ変換 ・8.0でswitchでor ・wpfで三角形

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -2,6 +2,93 @@
 
 ---
 
+## C# 8.0 の switch式でORを再現する
+
+CS9.0 (.Net5)ならswitch式で OR が使えるため、以下のような記述が可能。  
+
+``` cs
+var resultText = switchValue switch
+{
+    0 or 2 => "zero or two",
+    1 or 3 => "one or three",
+    _ => "unknown",
+};
+```
+
+``` cs
+var resultText = switchValue switch
+{
+    var x when x == 0 || x == 2 => "zero or two",
+    var x when x == 1 || x == 3 => "one or three",
+    _ => "unknown",
+};
+```
+
+[c# 8.0 - C# 8 switch expression with multiple cases with same result - Stack Overflow](https://stackoverflow.com/questions/56676260/c-sharp-8-switch-expression-with-multiple-cases-with-same-result)  
+
+---
+
+## WPF 三角形
+
+右上を直角とした赤い二等辺三角形を描画する。
+
+左上を(0,0)。右下を(1,1)とした座標軸。  
+(0.5,0.5)を始点とする。  
+X座標 : 8.652698。Y座標 : 0.5に点を置く。  
+X座標 : 8.652698。Y座標 : 8.068006に点を置く。  
+Zは終了を意味する。  
+
+3点が定まったので、図形としての最低条件を満たした。  
+囲った範囲をREDでFILLすることで目的の描画される。  
+
+大きさを変更した場合は、X,Y座標の`8`の部分だけいじれば大きさを変更可能。  
+
+``` xml
+<Path
+    Data="M0.50.5 L8.652698,0.5 8.652698,8.068006 z"/>
+```
+
+---
+
+## WPF バリデーションエラーのアイコンをテキストボックスの右上に置く
+
+mahappのバリデーションエラー時に右上にチョコンと出てくる赤いアイコンを再現したい。  
+Gridの中にtextblockとpathを置けばよろしい。  
+
+``` xml
+<Grid Style="{StaticResource StatusGrid}" ToolTipService.IsEnabled="{Binding Status, Mode=OneWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=Error}">
+    <ToolTipService.ToolTip>
+        <TextBlock Style="{DynamicResource ToolTipTextBlock}" Text="{Binding Message, Mode=OneWay}" />
+    </ToolTipService.ToolTip>
+    <TextBlock
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Style="{StaticResource StatusTextBlock}" />
+    <Path
+        HorizontalAlignment="Right"
+        Data="M0.50.5 L8.652698,0.5 8.652698,8.068006 z"
+        Fill="Red"
+        SnapsToDevicePixels="True"
+        Visibility="{Binding Message, Mode=OneWay, Converter={StaticResource StringToVisibilityConverter}}" />
+</Grid>
+```
+
+[Data Validation in WPF DataGrid control | Syncfusion](https://help.syncfusion.com/wpf/datagrid/data-validation)  
+[WPFボタンに画像を表示する-文字の上に画像を重ねて表示する | オレンジの国](https://techlive.tokyo/archives/4542)  
+
+---
+
+## wpfの描画ルール
+
+wpfは基本的にxamlの上から順に読み込まれる。  
+GRIDの描画も上のタグから順に行われる。  
+
+なので、重ねて表示したい場合は、先に大本になるコントロールから描画すべき。
+Tab順もxamlの上から順に割り振られる。  
+因みに、TabIndexの初期値はintの最大値らしい。  
+
+---
+
 ## C#のVSCodeのデバッグでコンソールの入力を有効にする方法
 
 `.vscode`ディレクトリ配下にある`launch.json`の`"console":"internalConsole"`の部分を
@@ -9,25 +96,6 @@
 
 [Visual Studio Code で Console.ReadLineを使う方法](https://qiita.com/link_to_someone/items/2b7cb8747a34165b8c8e)  
 c# vscode debug console readline  
-
----
-
-## sql where 仕組み
-
-SELECT文の内部的な処理の基本は、テーブルの各行に対する繰り返し処理  
-プログラミングでいうところのfor文。  
-
-SELECT文の処理は2つに分けられる。  
-
-- テーブルを1行ずつ処理する。  
-- テーブル内の複数の行を集約する。  
-
-2つのうち、どちらの処理が行われるかは以下で判断できる。  
-
-- SELECT句で集約関数を使わない場合、テーブルは1行ずつ処理される。  
-- SELECT句で集約関数を1つでも使った場合、テーブル内の複数の行で集約が行われる。  
-
-[SELECT文の処理の仕組みを説明してみた。](https://nattou-curry-2.hatenadiary.org/entry/20090315/1237089749)
 
 ---
 
