・整理 ・sqlserver ネットワークの設定、照合順序

--- a/C#_WPF/メモ.md
+++ b/C#_WPF/メモ.md
@@ -568,6 +568,17 @@ ContextMenuからFindAncestorがうまく行かない。
 
 ---
 
+## wpfの描画ルール
+
+wpfは基本的にxamlの上から順に読み込まれる。  
+GRIDの描画も上のタグから順に行われる。  
+
+なので、重ねて表示したい場合は、先に大本になるコントロールから描画すべき。
+Tab順もxamlの上から順に割り振られる。  
+因みに、TabIndexの初期値はintの最大値らしい。  
+
+---
+
 ## 参考リンク集
 
 [WPFのソースコード](https://github.com/dotnet/wpf)  
