--- a/DB/SQLServer/照合順序とデータ型/照合順序.md
+++ b/DB/SQLServer/照合順序とデータ型/照合順序.md
@@ -1,1 +1,258 @@
 # 照合順序
+
+## 照合順序とは？
+
+大文字と小文字の区別やカタカナとひらがなの区別、データの並べ替え順に影響のある設定項目。  
+
+SQLServerでは、文字列を検索する際に"英字の大文字と小文字を区別するかどうか"や"カタカナとひらがなを区別するかどうか"、"半角と全角を区別するかどうか"などをけっていするための機能を照合順序という。  
+
+---
+
+## 照合順序の設定
+
+デフォルトの照合順序は、`Japanese_CI_AS`と呼ばれ、次の特徴がある。  
+
+- アルファベットの大文字と小文字を区別しない  
+- ひらがなとカタカナを区別しない  
+- 半角と全角を区別しない(スペースの半角、全角も含まれる)  
+- アクセントを区別する  
+
+照合順序名の`Japanese_CI_AS`の`CI`は、`Case Insensitive`の略。  
+Caseは「UpperCase(大文字)とLowerCase(小文字)」、Insensitiveは「区別しない」という意味。  
+`AS`は`Accent Sensitive`の略。  
+アクセントをSensitive(区別する)という意味。  
+"アクセント"とは、「`Ô`」などアクセント記号付きの文字のことで、アクセントを区別する場合は、「`Ô`」と「`o`」は区別される。  
+
+従って、照合順序を「`Japanese_CS_AS`」(Case Sensitive)に変更した場合は、大文字と小文字を区別できるようになる。  
+そのほかの照合順序の指定には、ひらがなとカタカナを意味するK(Kana)、半角と全角を意味するW(Wide)がある。  
+
+従って、「`Japanese_CI_AS_KS_WS`」の場合は、Case(大文字と小文字)を区別しない、アクセント区別する、Kana(かなとカナ)を区別する、Wide(半角と全角)を区別するという意味になる。  
+
+||||
+|:-|:-|:-|
+|大文字と小文字の区別|CI (Case Insensitive)|区別しない|
+|^|CS (Case Sensitive)|区別する|
+|アクセントの区別|AI (Accent Insensitive)|区別しない|
+|^|AS (Accent Sensitive)|区別する|
+|ひらがなとカタカナの区別|KI (Kana Insensitive)|区別しない|
+|^|KS (Kana Sensitive)|区別する|
+|半角と全角の区別|WI (Wide Insensitive)|区別しない|
+|^|WS (Wide Sensitive)|区別する|
+
+照合順序はサーバー単位、データべース単位、列単位、クエリ単位で設定が可能。  
+
+---
+
+## デフォルトの照合順序の設定 (インストール時の設定)
+
+SQLServerがどのような照合順序を利用するかは、インストール時に設定する。  
+
+インストール時における、「`サーバーの構成`」画面で設定する。  
+
+設定後の確認はManagementStudioでSQLServerの名前サーバーを右クリックして、プロパティをクリックする。  
+これは確認だけで、照合順序を変更することはできない。  
+
+---
+
+## デフォルトの照合順序を変更したい場合
+
+デフォルトの照合順序を変更したい場合はSQLServerを再セットアップする必要がある。  
+
+また、「レプリケーション」や「ログ配布」、「データベースミラーリング」といったサーバー間連携の機能を利用する場合は、サーバー間で照合順序を同じものに設定しないと、正しく連携できないものがある。  
+照合順序はデータベース単位やテーブルの列単位で変更することもできるので、サーバーの照合順序を変更するかどうかは、慎重に考えるようにする。  
+
+---
+
+## データベース単位の照合順序の設定
+
+照合順序はデータベース単位でも設定できる。  
+データベース作成時の「`オプション`」ページから行える。  
+
+デフォルトは「`既定`」に設定されるので、サーバーの照合順序「`Japanese_CI_AS`」が適用される。  
+
+---
+
+## データベースの照合順序はテーブル名にも影響がある
+
+データべースの照合順序を変更した場合は、テーブル名の名前や列の名前など、データベース内に作成したモノ(オブジェクト)に対する名前にも影響がある。  
+例えば、「Products」という名前のテーブルがあった場合、デフォルトの照合順序(Japanese_CI_AS)では、次のようにSQLを記述することができる。  
+
+``` sql
+SELECT * FROM Produts
+SELECT * FROM PRODUCTS
+SELECT * FROM Ｐｒｏｄｕｃｔｓ
+```
+
+Japanese_CI_ASでは、大文字と小文字の区別と、半角と全角の区別はしないので、テーブル名にも、そのルールが適用される。  
+Japanese_CS_ASに設定した場合は、大文字と小文字を区別するので、以下の記述ではエラーとなる。  
+
+``` sql
+SELECT * FROM PRODUCTS
+```
+
+テーブル名を「Produts」と定義しているので、「PRODUTS」という名前のテーブルは存在しない(無効である)というエラーが発生する。  
+
+データべース単位で照合順序が変更できるようになったのは、2000からで、SQLServer 7.0まではサーバー単位での照合順序の設定しかできなかった。  
+
+---
+
+## 列単位の照合順序の設定
+
+照合順序は、テーブル内の列ごとに設定することもできる。  
+「`テーブルデザイナー`」から設定する。  
+
+テーブル名を右クリック、「`構造`」をクリックしてテーブルデザイナーを開く。  
+
+### "変更の保存が許可されていません"エラーが発生する場合
+
+列単位の照合順序を設定して保存する際に、"変更の保存が許可されていません"エラーが発生する場合には、Management Studioの「ツール」メニューの「オプション」画面で「`テーブルの再作成を必要とする変更を保存できないようにする`」チェックボックスをオフに設定する。  
+
+---
+
+## SQLで列単位の照合順序を設定する
+
+CREATE TABLEステートメントによるテーブルの作成時に、列単位の照合順序を設定したい場合は、次のようにデータ型の隣に、`COLLATE句`を使って照合順序名を記述する。  
+
+``` sql
+CREATE TABLE 商品
+(
+    商品コード int          PRIMARY KEY,
+    商品名     nvarchar(40) COLLATE Japanese_CS_AS NOT NULL,
+    …
+)
+```
+
+作成済みの既存のテーブルに対して後から照合順序を変更するには、ALTER TABLEステートメントを使って記述する。  
+
+``` sql
+ALTER TABLE 商品
+ALTER COLUMN 商品名 nvarchar(40) COLLATE Japanese_CS_AS
+```
+
+変更したい列のデータ型の隣に、`COLLATE句`を使って照合順序名を指定する。  
+
+---
+
+## SQL単位の照合順序の変更
+
+照合順序はSQLステートメント単位で変更することもできる。  
+`COLLATE句`を使って、次のように記述する。  
+
+``` sql
+SELECT * FROM 商品
+WHERE 商品名 = 'PIZZA' COLLATE Japanese_CI_AS
+```
+
+---
+
+## すべてを区別する「Japanese_BIN」
+
+照合順序の「`Japanese_BIN`」は、"バイナリ順"(Binary Sort)と呼ばれ、漢字コード(charデータ型なら Shift-JIS,ncharデータ型ならUnicode)での比較になる。  
+大文字と小文字、半角と全角、ひらがなとカタカナには、それぞれ異なる漢字コードが割り当てられているため、Japanese_BINを利用すれば、すべてを区別できるようになる。  
+
+例えば、次のように利用する。  
+
+``` sql
+SELECT * FROM 商品
+WHERE 商品名 = 'Ｐｉｚｚａ' COLLATE Japanese_BIN
+```
+
+Japanese_BINを利用しない場合は、データがJapanese_CS_ASで格納されているので、半角と全角の区別はないが、Japanese_BINを指定することで区別できるようになる。  
+
+因みに、SQLServer 6.5の時は、Japanese_BINがデフォルトの照合順序だった。  
+7.0からJapanese_CI_ASがデフォルトになった。  
+
+---
+
+## 照合順序とORDER BY
+
+照合順序は、ORDER BYを使った並べ替え順にも影響する。  
+
+例えば、デフォルトのJapanese_CI_ASでは、ひらがなの後にカタカナが来るのではなく、同じ音(`あ`と`ア`)は同じ値とみなされる。  
+
+``` sql
+SELECT *
+FROM (
+    SELECT 'あ' AS col1
+    UNION ALL
+    SELECT 'ア'
+    UNION ALL
+    SELECT 'い'
+    UNION ALL
+    SELECT 'イ'
+) AS A
+ORDER BY col1
+
+-- 「あ」と「ア」は同じ値とみなされている
+-- 「い」と「イ」も同じ値とみなされている
+-- +----+
+-- |col1|
+-- +----+
+-- |ア  |
+-- |あ  |
+-- |イ  |
+-- |い  |
+-- +----+
+```
+
+このような場合に、ひらがなの後にカタカナが来るようにするには、次のようにJapanese_BIN(バイナリ順)を使って、漢字コード順に並べ替えるようにする。  
+
+``` sql
+SELECT *
+FROM (
+    SELECT 'あ' AS col1
+    UNION ALL
+    SELECT 'ア'
+    UNION ALL
+    SELECT 'い'
+    UNION ALL
+    SELECT 'イ'
+) AS A
+ORDER BY col1 COLLATE Japanese_BIN
+
+-- 漢字コード順ならひらがなの後にカタカナが来る
+-- +----+
+-- |col1|
+-- +----+
+-- |あ  |
+-- |い  |
+-- |ア  |
+-- |イ  |
+-- +----+
+```
+
+---
+
+## SQL単位の照合順はなるべく利用しないようにすべし
+
+WHEREやORDER BYでCOLLATE句を使って照合順序を変更する場合は、内部的にはインデックスが使用されないテーブルスキャンまたは、インデックススキャンが行われるため、パフォーマンスの悪い検索になる。  
+従って、COLLATE句をなるべく使わなくて済むように、事前に照合順序をきちんと設定しておくことが重要。  
+
+---
+
+## Oracleでの大文字と小文字の区別
+
+Oracleの動作と、SQL ServerのJapanese_CI_ASの動作比較。  
+
+||Oracle|Japanese_CI_AS|
+|:-|:-|:-|
+|テーブル内のデータ|区別する|区別しない|
+|テーブル名や列名等|区別しない|区別しない|
+
+Oracleの場合は、データの大文字と小文字を区別し、テーブル名や列名などのデータベース内に作成したオブジェクトに対する名前は区別されない。  
+従って、「商品名」列のデータが「Pizza」と格納されている場合、Oracleでは「商品名='PIZZA'」では検索結果を取得することができない。  
+大文字と小文字を正確に指定する必要がある。  
+
+---
+
+## 照合順序の一覧
+
+SQLServerで利用できる照合順序の一覧は、次のSQLを実行して確認することができる。  
+
+``` sql
+SELECT * FROM fn_helpcollations() WHERE name like '%japan%'
+```
+
+---
+
+<http://www.sqlquality.com/books/dev03/9-1.txt>  
