--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -2,6 +2,17 @@
 
 ---
 
+## タスクのキャンセル
+
+[C#のタスクキャンセル | ftvlog](https://ftvoid.com/blog/post/260)  
+
+[C#_Task の処理を止める - …Inertia](https://koshinran.hateblo.jp/entry/2018/05/17/235911)  
+[【C#】Taskのキャンセル - PG日誌](https://takap-tech.com/entry/2022/05/03/002600)  
+[Canceling A Running Task](https://www.c-sharpcorner.com/UploadFile/80ae1e/canceling-a-running-task/)  
+[【Unity】Taskでメインスレッドを止める・止めない実例集 - はなちるのマイノート](https://www.hanachiru-blog.com/entry/2020/05/26/120000)  
+
+---
+
 ## C#のVSCodeのデバッグでコンソールの入力を有効にする方法
 
 `.vscode`ディレクトリ配下にある`launch.json`の`"console":"internalConsole"`の部分を
