文字列参考追加 タスク参考追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -4,6 +4,23 @@
 
 ## タスクのキャンセル
 
+cancellationtokensource
+OperationCanceledException
+throwifcancellationrequested c#
+c# task 強制終了
+
+[TPL入門 (13) - タスクのキャンセル - xin9le.net](https://blog.xin9le.net/entry/2011/08/20/180329)  
+[タスクのキャンセル | Microsoft Learn](https://learn.microsoft.com/ja-jp/dotnet/standard/parallel-programming/task-cancellation)  
+
+[c# - What's the purpose of Task.FromCanceled - Stack Overflow](https://stackoverflow.com/questions/67597488/whats-the-purpose-of-task-fromcanceled)  
+
+>継続タスクは、キャンセルするCancellationTokenを受け取ります。これは、継続タスクが未着手のままキャンセルされることを意味する。キャンセルしたくないものには、そのトークンを渡してはいけない。
+CancellationTokenは、アクションのグラフ全体を一度にキャンセルするためのものだ。トークンを渡さないことで、キャンセルから除外することができる。
+[c# 4.0 - ContinueWith a cancelled Task - Stack Overflow](https://stackoverflow.com/questions/11892315/continuewith-a-cancelled-task)  
+
+[C# 非同期、覚え書き。 - Qiita](https://qiita.com/hiki_neet_p/items/d6b3addda6c248e53ef0#task-%E3%81%AE%E3%82%AD%E3%83%A3%E3%83%B3%E3%82%BB%E3%83%AB)  
+[[UniTask] キャンセルされても処理を続ける](https://zenn.dev/murnana/articles/unitask-continue-with-cancel)  
+
 [C#のタスクキャンセル | ftvlog](https://ftvoid.com/blog/post/260)  
 
 [C#_Task の処理を止める - …Inertia](https://koshinran.hateblo.jp/entry/2018/05/17/235911)  
